# GPGPUExperiments

./: CMakeLists.txt  README.md
src/1_hello_opencl/: CMakeLists.txt  hello_opencl.cpp
src/2_hello_cuda/: CMakeLists.txt  hello_cuda.cpp
